src/tests/snapshots/niri__tests__window_opening__check_target_output_and_workspace@ws2-out2-fsT-wfsAU-spB2.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nset parent: B2\nconfig:\nworkspace \"ws-1\" {\n    open-on-output \"headless-1\"\n}\n\nworkspace \"ws-2\" {\n    open-on-output \"headless-2\"\n}\n\nwindow-rule {\n    exclude title=\"parent\"\n\n    open-on-workspace \"ws-2\"\n    open-on-output \"headless-2\"\n    open-fullscreen true\n}\n\nwindow-rule {\n    match title=\"parent\"\n    open-on-output \"headless-2\"\n}"
expression: snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 1920 × 1080, bounds: 1920 × 1080, states: [Fullscreen]

post-map configures:
size: 0 × 0, bounds: 1920 × 1080, states: []
